<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_randomize"
        android:icon="@drawable/rotate_right_24"
        android:title="@string/menu_randomize"
        />

    <item
        android:id="@+id/menu_privacy"
        android:icon="@drawable/lock_24"
        android:title="@string/menu_privacy"
        />



    <group android:id="@+id/group_navigation" android:checkableBehavior="none">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home_24"
            android:title="@string/menu_home"
            />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/settings_24"
            android:title="@string/menu_settings"
            />

        <item
            android:id="@+id/menu_info"
            android:icon="@drawable/info_24"
            android:title="@string/menu_info"
            />
    </group>
</menu>